# mozrentpereoo

./: .gitignore  Cargo.toml  README.md  env.example
src/: app.rs  calendar.rs  cli.rs  lib.rs  main.rs
src/api/: mod.rs
src/interfaces/: cli.rs  mod.rs  web.rs
src/pages/: cars.rs  index.rs  mod.rs  reservation.rs  session.rs  terms.rs
src/services/database/: entities.rs  mod.rs  sqlite.rs
