[package]
name = "mozrentpereoo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.7", optional = true }
leptos = { version = "0.7.0" }
leptos_meta = { version = "0.7.0" }
leptos_router = { version = "0.7.0" }
leptos_axum = { version = "0.7.0", optional = true }
#
wasm-bindgen = { version = "=0.2.100", optional = true }
console_error_panic_hook = { version = "0.1", optional = true}
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
#
chrono = "0.4.39"
leptos_calendar = {version = "0.1.1", path = "../leptos-calendar" }

[features]
web = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
server = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "mozrentpereoo"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
tailwind-input-file = "style/tailwind.css"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
env = "DEV"
bin-features = ["server"]
bin-default-features = false
lib-features = ["web"]
lib-default-features = false
lib-profile-release = "wasm-release"
